--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
 	color: white;
 }
 @media screen and (max-width:60px){
-	.column.
+	.column {
+		width: 100%;
 }
 
 /* The navbar container */
