--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     padding: 20px;
     text-align: center;
 	color: white;
+	margin-top: 20px;
 }
 @media screen and (max-width:60px){
 	.footer {
